results/SVCOMP/4-shot/log-ExSymExe19-2024_03_18_18_44_34.txt
class Main {
  static int field;
  static int field2;

  /*@ requires Integer.MIN_VALUE <= arg && arg <= Integer.MAX_VALUE;
    @ ensures \result <==> field < 0;
    @ ensures !\result ==> field >= 0 && field == field % 10 && test(3, field, field2);
    @ assignable field, field2;
    @*/
  public static boolean f(int arg) {
    int x = 3; // symbolic

    Main inst = new Main();
    field = arg;
    if (field < 0) return true;
    field = field % 10;
    return inst.test(x, field, field2);
  }

  /*@ requires x == 3 && Integer.MIN_VALUE <= z && z <= Integer.MAX_VALUE && Integer.MIN_VALUE <= r && r <= Integer.MAX_VALUE;
    @ ensures \result ==> (x > 99 ==> \not_modified(field, field2) && \result == false) && (x <= 99 ==> (r > z ==> \not_modified(field, field2) && \result == true) && (r <= z ==> \not_modified(field, field2) && \result == true));
    @ assignable field, field2;
    @*/
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe19");
    int y = 3;
    x = z + r;
    z = y * x;
    r = -z;
    if (x > 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (r > z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures \result <==> field < 0;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures !\result ==> field >= 0 && field == field % 10 && test(3, field, field2);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures !\result ==> field >= 0 && field == field % 10 && test(3, field, field2);
                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures !\result ==> field >= 0 && field == field % 10 && test(3, field, field2);
                                                  ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures !\result ==> field >= 0 && field == field % 10 && test(3, field, field2);
                                                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures !\result ==> field >= 0 && field == field % 10 && test(3, field, field2);
                                                                               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:7: error: non-static method test(int,int,int) cannot be referenced from a static context
    @ ensures !\result ==> field >= 0 && field == field % 10 && test(3, field, field2);
                                                                ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:8: error: An identifier with package visibility may not be used in a assignable clause with public visibility
    @ assignable field, field2;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:8: error: An identifier with package visibility may not be used in a assignable clause with public visibility
    @ assignable field, field2;
                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures \result ==> (x > 99 ==> \not_modified(field, field2) && \result == false) && (x <= 99 ==> (r > z ==> \not_modified(field, field2) && \result == true) && (r <= z ==> \not_modified(field, field2) && \result == true));
                                                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures \result ==> (x > 99 ==> \not_modified(field, field2) && \result == false) && (x <= 99 ==> (r > z ==> \not_modified(field, field2) && \result == true) && (r <= z ==> \not_modified(field, field2) && \result == true));
                                                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures \result ==> (x > 99 ==> \not_modified(field, field2) && \result == false) && (x <= 99 ==> (r > z ==> \not_modified(field, field2) && \result == true) && (r <= z ==> \not_modified(field, field2) && \result == true));
                                                                                                                                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures \result ==> (x > 99 ==> \not_modified(field, field2) && \result == false) && (x <= 99 ==> (r > z ==> \not_modified(field, field2) && \result == true) && (r <= z ==> \not_modified(field, field2) && \result == true));
                                                                                                                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures \result ==> (x > 99 ==> \not_modified(field, field2) && \result == false) && (x <= 99 ==> (r > z ==> \not_modified(field, field2) && \result == true) && (r <= z ==> \not_modified(field, field2) && \result == true));
                                                                                                                                                                                                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
    @ ensures \result ==> (x > 99 ==> \not_modified(field, field2) && \result == false) && (x <= 99 ==> (r > z ==> \not_modified(field, field2) && \result == true) && (r <= z ==> \not_modified(field, field2) && \result == true));
                                                                                                                                                                                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:22: error: An identifier with package visibility may not be used in a assignable clause with public visibility
    @ assignable field, field2;
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:22: error: An identifier with package visibility may not be used in a assignable clause with public visibility
    @ assignable field, field2;
                        ^
17 errors

